align german and english version

--- a/de/trans/trLevels.dita
+++ b/de/trans/trLevels.dita
@@ -121,8 +121,8 @@
                         <li>Verſendung (Ver·sen·dung <i>[etwas wird an einen anderen Ort
                                 gesendet]</i> ) und Versendung (Vers·en·dung <i>[das Ende eines
                                 Verses]</i>)</li>
-                        <li>Röschenhof (Rös·chen·hof, von kleine Rose) und Röſchenhof (Rö·schen·hof,
-                            vom Eigennamen Röschen)</li>
+                        <li>Röschenhof (Rös·chen·hof, ein Hof mit kleinen Rosen) und Röſchenhof
+                            (Rö·schen·hof, vom Eigennamen Röschen)</li>
                         <li>Lachſturm (Lach·sturm <i>[heftiges Lachen]</i>) und Lachsturm
                             (Lachs·turm <i>[ein Turm der aus dem Fisch Lachs besteht]</i>)</li>
                     </ul>
