--- a/en/trans/layout.dita
+++ b/en/trans/layout.dita
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="layout">
-    <title>Layout and Structure</title>
-<titlealts><navtitle>Layout and Structure</navtitle></titlealts>
+    <title>📰 Layout and Structure</title>
+
 <abstract>
 <shortdesc>Guidelines for the layout and structure of printed texts for use as Ground
             Truth</shortdesc>
