--- a/en/trans/page_xml_erweiterungen.dita
+++ b/en/trans/page_xml_erweiterungen.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="page_xml_erweiterungen">
-    <title>Page XML Extensions</title><body>
+    <title>📚 Page XML Extensions</title><body>
         <p>By PAGE XML Extensions we do not mean an extension of the PAGE schema in the narrow
             sense.</p>
         <p>Rather, specific extensions of the PAGE format are documented in this part. Furthermore,
