--- a/en/trans/lyNotenzeichen.dita
+++ b/en/trans/lyNotenzeichen.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="lyNotenzeichen">
-    <title>Notes (MusicRegion)</title>
+    <title>Musical note (MusicRegion)</title>
     <body>
         <p>Musical notations of all kinds (historical, modern or neumes) are marked as such. If, in
             the case of songs, texts are below individual music staves and a clear separation is
