--- a/en/trans/index.dita
+++ b/en/trans/index.dita
@@ -24,9 +24,11 @@
 
     </body>
     <related-links><linklist outputclass="linklist_index"><title>The guidelines are divided into the following parts:</title>
+        <link href="trLevels.dita"/>
         <link href="transkription.dita"/>
         <link href="layout.dita"/>
         <link href="structur_gt.dita"/>
+        <link href="trLabeling.dita"/>
         <link href="trPage.dita"/>
         <link href="page_xml_erweiterungen.dita"/></linklist>
     </related-links>
