--- a/en/trans/level_1_6.dita
+++ b/en/trans/level_1_6.dita
@@ -5,7 +5,7 @@
     <body>
 <p>The <b>round-r</b> is transcribed according to its meaning, i.e. as the <tt>r</tt> commonly used
             today or as <tt>et</tt>-substituent in abbreviation for <tt>et cetera</tt>. </p>
-<table id="table_g2c_2wp_mbb">
+<table id="table_g2c_2wp_mbb" frame="all">
 <title>Exampel (round r as today's <tt>r</tt> and as <tt>et</tt>):</title>
 <tgroup cols="2">
 <thead>
