--- a/en/trans/ocr_d_koordinationsgremium_codierung.dita
+++ b/en/trans/ocr_d_koordinationsgremium_codierung.dita
@@ -6,7 +6,7 @@
                 href="http://www.primaresearch.org/www/assets/tools/Special%20Characters%20in%20Aletheia.pdf"
                 format="pdf" scope="external"/></p>
         <p>
-<table id="table_fpw_g35_s1b">
+<table id="table_fpw_g35_s1b" frame="all">
 <tgroup cols="8">
 <colspec colnum="1" colname="col1"/>
 <colspec colnum="2" colname="col2"/>
