--- a/en/trans/trBruch.dita
+++ b/en/trans/trBruch.dita
@@ -9,7 +9,7 @@
             <title>Stand-alone fractions (one character)</title>
             <p>Fractions, if any, are represented by means of their corresponding encodings or characters.
                 are reproduced: </p>
-            <table id="table_qcm_f3d_b1b">
+            <table id="table_qcm_f3d_b1b" frame="all">
                 <tgroup cols="1">
                     <thead>
                         <row>
