--- a/en/trans/tr_nasal_level_3.dita
+++ b/en/trans/tr_nasal_level_3.dita
@@ -9,7 +9,7 @@
                 href="http://folk.uib.no/hnooh/mufi/" format="html" scope="external">MUFI</xref>)
             and codes defined by the coordination project in agreements with major international
             projects as IMPACT, EEBO and ECCO. Several encodings are not combined to form one
-            character.</p><table>
+            character.</p><table frame="all">
 <tgroup cols="2">
 <thead>
 <row>
