--- a/en/trans/level_2_und_3_2.dita
+++ b/en/trans/level_2_und_3_2.dita
@@ -6,7 +6,7 @@
 <p>The Unicode entity <tt>&#xa75b; (U+A75B, LATIN SMALL LETTER R ROTUNDA)</tt> represents the
             so-called <tt>round r</tt>. It is often found in conjunction with the <tt>r</tt>commonly
             used today or as an <tt>et</tt>-substituent in abbreviations for <tt>et cetera</tt>. </p>
-<table id="table_k2t_dwp_mbb">
+<table id="table_k2t_dwp_mbb" frame="all">
 <title>Examples for the transcription of the round <tt>r</tt> in level 2-3 :</title>
 <tgroup cols="2">
 <thead>
