--- a/en/trans/trHochgestellteZahl.dita
+++ b/en/trans/trHochgestellteZahl.dita
@@ -15,7 +15,7 @@
         <p>In addition, superscript numbers are used in mathematics for exponentials.</p>
 
 <p>
-    <table id="table_anp_grc_b1b">
+    <table id="table_anp_grc_b1b" frame="all">
         <tgroup cols="2">
                     <colspec colnum="1" colname="col1" colwidth="2.69*"/>
                     <colspec colnum="2" colname="col2" colwidth="1*"/>
