--- a/en/trans/tr_level_1.dita
+++ b/en/trans/tr_level_1.dita
@@ -8,7 +8,7 @@
             fk, fj, fh, fb, fz, ll, mm, nn, st, ch, ck, ct, th, tt, tz, kk, Qu, ſi, ſſ, ﬅ, ſch are
             always to be split. The existence of the ligature is not documented.</p>
 <p>Vocal ligatures are always transcribed:</p>
-<table id="table_svl_4vt_l1b">
+        <table id="table_svl_4vt_l1b" frame="all">
 <tgroup cols="4">
 <colspec colnum="1" colname="c1" colwidth="2.48*"/>
 <colspec colnum="2" colname="c2" colwidth="1*"/>
