--- a/en/trans/tr_level_2.dita
+++ b/en/trans/tr_level_2.dita
@@ -11,7 +11,7 @@
                 href="lyTypographie.dita#lyTypographie">typographical peculiarities</xref> and
             labelled accordingly.</p>
 <p>Vocal ligatures are always transcribed as one sign:</p>
-<table id="table_svl_4vt_l1b">
+        <table id="table_svl_4vt_l1b" frame="all">
 <tgroup cols="4">
 <colspec colnum="1" colname="c1" colwidth="2.48*"/>
 <colspec colnum="2" colname="c2" colwidth="1*"/>
