--- a/en/trans/tr_nasal_level_1.dita
+++ b/en/trans/tr_nasal_level_1.dita
@@ -5,7 +5,7 @@
     <body>
         <p>Abbreviation lines that appear as bars or wavy lines above letters and as substituents
             for omitted characters must be resolved in the transcription. </p>
-    <table>
+        <table frame="all">
     <tgroup cols="2">
     <thead>
     <row>
