--- a/en/trans/ocr_d_koordinationsgremium_codierung.dita
+++ b/en/trans/ocr_d_koordinationsgremium_codierung.dita
@@ -565,7 +565,7 @@ id="image_o5k_2gz_s1b"/></entry>
 </row>
 <row>
 <entry><image href="images/1EBD.png" id="image_k2d_hqz_s1b"/></entry>
-<entry> </entry>
+<entry>ẽ </entry>
 <entry>1EBD </entry>
 <entry>7869 </entry>
 <entry>Latin small letter e with tilde </entry>
@@ -1126,9 +1126,9 @@ id="image_o5k_2gz_s1b"/></entry>
 </row>
 <row>
 <entry><image href="images/F507.png" id="image_s5b_bsz_s1b"/></entry>
-<entry> </entry>
-<entry>F507 </entry>
-<entry>62727 </entry>
+<entry> </entry>
+<entry>E665</entry>
+<entry>58981 </entry>
 <entry>Latin small letter p with macron above </entry>
 <entry>MUFI </entry>
 <entry>p </entry>
