--- a/de/trans/trLigaturen2.dita
+++ b/de/trans/trLigaturen2.dita
@@ -242,7 +242,8 @@
               <entry>jꜩo<term><text>hex: &amp;#xA729;</text></term></entry>
               <entry outputclass="description">siehe <xref
                 href="https://de.wikipedia.org/wiki/%EA%9C%A8" format="html" scope="external"
-              /><note importance="recommended">Die MUFI Empfehlung ist nicht zu benutzen. </note><xref
+                >Ligatur TZ, Artikel in Wikipedia</xref><note importance="recommended">Die MUFI
+                Empfehlung ist nicht zu benutzen. </note><xref
                 href="https://folk.uib.no/hnooh/mufi/specs/MUFI-Alphabetic-4-0.pdf#page=81"
                 format="pdf" scope="external">MUFI character recommendation (Version 4.0; 22
                 Dezember 2015)</xref></entry>
